<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="256dp"
    android:layout_height="wrap_content"
    android:background="#1b1b1b"
    app:cardElevation="@dimen/elevation4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1b1b1b"
        android:orientation="vertical"
        android:padding="@dimen/padding4">

        <EditText
            android:id="@+id/edit_text_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:background="@null"
            android:hint="@string/word"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/padding16"
            android:textSize="@dimen/text_size16" />

        <EditText
            android:id="@+id/edit_text_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:background="@null"
            android:hint="@string/type"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/padding16"
            android:textSize="@dimen/text_size16" />

        <EditText
            android:id="@+id/edit_text_mean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:background="@null"
            android:hint="@string/mean"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/padding16"
            android:textSize="@dimen/text_size16" />

        <EditText
            android:id="@+id/edit_text_synonym"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:background="@null"
            android:hint="@string/synonym"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/padding16"
            android:textSize="@dimen/text_size16" />

        <EditText
            android:id="@+id/edit_text_antonym"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:background="@null"
            android:hint="@string/antonym"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/padding16"
            android:textSize="@dimen/text_size16" />

        <EditText
            android:id="@+id/edit_text_sentence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:background="@null"
            android:hint="@string/et_sentence"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/padding16"
            android:textSize="@dimen/text_size16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/add_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>